@@ -1,14 +1,22 @@
 work.dir
 *.4ct
+*.4ht
 *.4tc
+*.4xt
 *.aux
+*.bat
+*.c
 *.css
+*.dtd
 *.dvi
 *.html
 *.idv
+*.java
 *.lg
 *.log
+*.perl
 *.png
 *.tmp
 *.trc
+*.unix
 *.xref
